# audio-app

./: .gitignore  LICENSE  README.md  pyproject.toml
audio_app/: main.py
audio_app/static/: scripts.js  styles.css
audio_app/templates/: convert_audio.html  index.html  metadata.html
