[tool.poetry]
name = "audio-app"
version = "0.1.0"
description = ""
authors = ["Thiago Ribeiro <mackandalls@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
ffmpeg-python = "^0.2.0"
jinja2 = "^3.1.4"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
